--- a/style.css
+++ b/style.css
@@ -57,14 +57,8 @@ input:focus {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
-@media only screen and (max-width: 1366px) {
-  .login--Bg {
-    background-position: left bottom;
-  }
-}
 @media only screen and (max-width: 1024px) {
   .login--Bg {
-    background-position: 15% bottom;
     background-image: url("images/loginbg_mid.png");
   }
 }
@@ -88,7 +82,6 @@ input:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 50px 0 0;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -101,7 +94,7 @@ input:focus {
 }
 @media only screen and (max-width: 991px) {
   .login__area {
-    padding: 50px 0 0;
+    padding: 30px 0 0;
   }
 }
 @media only screen and (max-width: 320px) {
@@ -156,17 +149,19 @@ input:focus {
   }
 }
 .login--logo img {
+  max-width: 350px;
+  width: 100%;
   margin-bottom: 10px;
 }
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 991px) {
   .login--logo img {
-    max-width: 250px;
+    max-width: 350px;
     margin-bottom: 0px;
   }
 }
 @media only screen and (max-width: 480px) {
   .login--logo img {
-    max-width: 200px;
+    max-width: 90%;
     margin-bottom: 0px;
   }
 }
@@ -340,12 +335,9 @@ input:focus {
   font-weight: bold;
 }
 .login--btn {
-  width: 420px;
   padding: 10px 20px;
-  height: 70px;
   background-size: cover;
   background-color: transparent;
-  background-image: url("images/green_b_btn.png");
   border-radius: 0px;
   text-shadow: #562216 2px 2px 2px;
   color: #fff;
@@ -367,12 +359,7 @@ input:focus {
   }
 }
 .login--btn img {
-  max-height: 45px;
-}
-@media only screen and (max-width: 414px) {
-  .login--btn img {
-    max-height: 30px;
-  }
+  width: 100%;
 }
 @media only screen and (max-width: 480px) {
   .login--btn {
@@ -382,9 +369,6 @@ input:focus {
   }
 }
 .login--btn:focus, .login--btn:active {
-  background-size: cover;
-  background-color: transparent;
-  background-image: url("images/red_b_btn.png");
   border-radius: 0px;
   margin-top: 5px;
   outline: none;
@@ -422,13 +406,11 @@ input:focus {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  position: absolute;
-  margin-left: 20%;
-  bottom: 10%;
-  display: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 @media only screen and (max-width: 991px) {
   .login__text2 {
@@ -451,6 +433,16 @@ input:focus {
         align-content: flex-end;
   }
 }
+@media only screen and (max-width: 768px) {
+  .login__text2 {
+    padding: 0 12%;
+  }
+}
+@media only screen and (max-width: 667px) {
+  .login__text2 {
+    padding: 0px;
+  }
+}
 @media only screen and (max-width: 480px) {
   .login__text2 {
     -ms-flex-wrap: wrap;
@@ -458,22 +450,8 @@ input:focus {
   }
 }
 .login__text2 img {
-  max-width: 450px;
-}
-@media only screen and (max-width: 1366px) {
-  .login__text2 img {
-    max-width: 450px;
-  }
-}
-@media only screen and (max-width: 1024px) {
-  .login__text2 img {
-    max-width: 380px;
-  }
-}
-@media only screen and (max-width: 991px) {
-  .login__text2 img {
-    max-width: 80%;
-  }
+  max-width: 100%;
+  margin-bottom: 10px;
 }
 @media only screen and (max-width: 480px) {
   .login__text2 img {
